<resources>
    <string name="app_name">Termocel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_telephones">Teléfonos</string>
    <string name="action_alerts">Alertas</string>
    <string name="action_history">Historial</string>
    <string name="action_print_log">Exportar XLS</string>
    <string name="action_help">Ayuda</string>


    <string name="firebase_url">https://autolog.firebaseio.com/</string>


    <string name="title_activity_sensor_selector">SensorSelector</string>
    <string name="toast_message_send">Mensaje enviado con éxito</string>
    <string name="toast_message_not_send">Hay un problema enviando el mensaje</string>
    <string name="main_no_info">No tenemos información de este Microlog, por favor presione el botón para adquirir el estado actual.</string>
    <string name="main_refresh_state_button">Actualizar Estado</string>

    <string name="title_activity_telephone_change">TelephoneChangeActivity</string>
    <string name="telephone_update_date">Fecha de actualización:</string>
    <string name="telephone_modify">Modificar</string>
    <string name="telephone_activity_title">Teléfonos Guardados</string>
    <string name="title_activity_set_points">SetPointsActivity</string>
    <string name="set_point_1">SetPoint 1 - Atención</string>
    <string name="set_point_2">SetPoint 2 - Advertencia</string>
    <string name="set_point_3">SetPoint 3 - Alarma</string>
    <string name="set_point_4">SetPoint 4 - Alarma</string>


    <string name="set_points_title">Reporte de Alarmas</string>
    <string name="main_last_known_temp">Ultima temperatura conocida:</string>
    <string name="main_status">Estatus:</string>
    <string name="main_relative_humidity">Humedad Relativa:</string>
    <string name="main_update_date">Fecha de actualización:</string>
    <string name="set_points_microlog_id">Microlog Id</string>
    <string name="selector_new_contact">Nuevo Microlog</string>
    <string name="selector_existing_contact">Seleccionar Microlog de lista de contactos</string>
    <string name="selector_telephone_number">Numero de teléfono</string>
    <string name="selector_id_name">Nombre Identificador</string>
    <string name="selector_microlog_id">ID Microlog</string>
    <string name="selector_button_save">Guardar</string>
    <string name="selector_select_contact">Seleccione el Microlog</string>


    <string name="dialog_yes">Enviar</string>
    <string name="dialog_yes_delete">Borrar</string>
    <string name="dialog_no">Cancelar</string>
    <string name="dialog_title_state">Obtener estado actual</string>
    <string name="dialog_title_delete">Borrar Microlog</string>
    <string name="dialog_title_set_point">Cambiar Set Point</string>
    <string name="dialog_title_get_all_set_points">Obtener todos los set points</string>
    <string name="dialog_title_telephone">Cambiar teléfono</string>
    <string name="dialog_title_telephone_spinner">Cambiar numero teléfonos a reportar</string>
    <string name="dialog_title_telephone_consult">Consultar teléfono</string>
    <string name="dialog_title_telephone_consult_spinner">Consultar numero de teléfonos para reportar</string>
    <string name="dialog_message_confirm_sms">Esta acción enviará un SMS</string>
    <string name="dialog_message_confirm_delete">Esta seguro de borrar el Microlog?</string>
    <string name="dialog_message_temperature_is_the_same">La temperatura es la misma que tenia anteriormente, esta seguro de enviar el mensaje?</string>
    <string name="text_100_F">100°F</string>
    <string name="text_0F">0°F</string>


    <string name="title_activity_history">HistoryActivity</string>
    <string name="history_activity_title">Historial</string>
    <string name="text_history_status">Estado</string>
    <string name="text_history_temp">Temp F</string>
    <string name="text_history_humidity">Humedad</string>
    <string name="text_history_date">Fecha</string>
    <string name="button_set_points_obtain_all">Obtener SetPoints</string>
    <string name="extra_subject">"Reporte de temperaturas "</string>
    <string name="extra_text">Reporte de temperaturas Termocel</string>
    <string name="email_sent">Finalizado</string>
    <string name="send_email">Enviar Email…</string>
    <string name="toast_telephone_consult_send">"Mensaje de consulta enviado al "</string>
    <string name="toast_telephone_change_empty">El campo de teléfono esta vació</string>


    <string-array name="telephone_items_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Tab Titles -->
    <string-array name="tab_titles">
        <item>@string/app_toolbar_title_map</item>
        <item>@string/app_toolbar_title_detail</item>
    </string-array>

    <!--toolbar titles-->
    <string name="app_toolbar_title_detail">Detalle</string>
    <string name="app_toolbar_title_map">Mapa</string>


    <string name="gps_network_not_enabled">GPS is not enabled</string>
    <string name="gps_network_not_enabled_message">This application needs the location services to be enabled, please open the location settings and enable it</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delete">Map</string>
    <string name="add_a_microlog">Agrega un Microlog</string>
    <string name="no_microlog_selected">No tiene ningún microlog seleccionado, por favor seleccione uno</string>
    <string name="help_main_add">Utilize este botón para agregar un Microlog, puede agregarlo de su lista de contactos o crear uno nuevo</string>
    <string name="next">Siguiente</string>
    <string name="hide">Ocultar</string>
    <string name="help_main_list">Aquí, una vez agregados, podrá ver su lista de Micrologs</string>
    <string name="help_main_map">En este mapa podrá ver los micrologs por su hubicación geográfica</string>
    <string name="help_detail_update">Para actualizar el estado de su microlog presione el botón de "Actualizar Estado"</string>
    <string name="help_detail_container">Aquí puede ver los datos de su microlog y su ultima actualización</string>
    <string name="help_telephone_consult">Para cambiar el modo a solo consulta, active este switch. En este modo solo se pedirán actualizaciones de cada sección.</string>
    <string name="help_history_export">Presione aquí para exportar su historial y mandarlo como .xls. Se le presentaran varias opciones de preferencia elija su cliente de correo electrónico.</string>
    <string name="dialog_update_positive">Actualizar</string>
    <string name="dialog_update_negative">Cancelar</string>
    <string name="dialog_edit_sensor_title">Editar Sensor</string>


    <string name="dialog_edit_lat">Latitud</string>
    <string name="dialog_edit_lon">Longitud</string>
    <string name="dialog_edit_name">Nombre</string>


</resources>
