<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.ocr.termocel.SensorSelectorActivity"
              android:background="@color/background_material_light">

    <!-- A RecyclerView with some commonly used attributes -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo_new"
        />

    <Button
        android:id="@+id/buttonGetContact"
        style="@style/ButtonNormal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/selector_existing_contact"/>

    <Button
        android:id="@+id/buttonNewContact"
        style="@style/ButtonNormal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/selector_new_contact"/>

    <LinearLayout
        android:id="@+id/newContactContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selector_telephone_number"/>

            <EditText
                android:id="@+id/editTextNewPhoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:phoneNumber="true"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selector_id_name"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            style="@style/ButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/selector_button_save"/>
    </LinearLayout>


</LinearLayout>
