<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ocr.termocel.HistoryActivity"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/textViewTempStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_history_status" />

            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/textViewTempF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_history_temp" />

            <TextView
                style="@style/TextViewTitle"
                android:id="@+id/textViewTempHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_history_humidity" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTempTime"
                android:layout_weight="1"
                android:text="@string/text_history_date" />
        </LinearLayout>

        <com.ocr.termocel.custom.recyclerView.EmptyRecyclerView
            android:id="@+id/recycler_view_history"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="21dp"
            android:scrollbars="vertical" />
    </LinearLayout>
</RelativeLayout>
