<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ocr.termocel.SetPointsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    style="@style/TextViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_points_microlog_id" />

                <EditText
                    android:id="@+id/editTextMicrologId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSetPointAll"
                style="@style/ButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_set_points_obtain_all" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/set_point_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBarSetPoint1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".85" />

                <EditText
                    android:id="@+id/editTextSetPoint1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".15"
                    android:inputType="number" />

                <TextView
                    style="@style/TextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="° F" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonSetPoint1"
                style="@style/ButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/telephone_modify" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/set_point_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBarSetPoint2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".85" />

                <EditText
                    android:id="@+id/editTextSetPoint2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".15"
                    android:inputType="number" />

                <TextView
                    style="@style/TextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="° F" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSetPoint2"
                style="@style/ButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/telephone_modify" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/set_point_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBarSetPoint3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".85" />

                <EditText
                    android:id="@+id/editTextSetPoint3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".15"
                    android:inputType="number" />

                <TextView
                    style="@style/TextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="° F" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonSetPoint3"
                style="@style/ButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/telephone_modify" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
